<resources>
    <string name="app_name">ParkirajMe</string>
    <string name="appImage">AppImage</string>
    <string name="splash_screen">Splash screen</string>

    <string name="username">Korisničko ime</string>
    <string name="password">Lozinka</string>
    <string name="sign_up_link">Nemate nalog? Registrujte se</string>

    <string name="prompt_name">Ime</string>
    <string name="prompt_surname">Prezime</string>
    <string name="prompt_username">Korisničko ime</string>
    <string name="prompt_email">E-mail adresa</string>
    <string name="registration_number">Registracijski broj automobila</string>
    <string name="prompt_password">Lozinka</string>
    <string name="action_sign_in">Prijava</string>
    <string name="confirm_password">Ponovite lozinku</string>
    <string name="create_account">Registrujte se</string>

    <string name="no_valid_email_message">Selected account doesn\'t have a valid email, please select another one.</string>
    <string name="select_account_with_email_message">Please select an account with a valid email address.</string>

    <string name="facebook_app_id">1910093245904650</string>
    <string name="google_api_id">AIzaSyDbJ0ls2D2-aIVoAuJUerkCLTiQ9SsWaWQ</string>

    <string name="search_action">Pretraga</string>
    <string name="nearest_action">Najbliži parking</string>
    <string name="duration_action">Trajanje</string>

    <string name="parking_name">Naziv</string>
    <string name="parking_address">Adresa</string>
    <string name="parking_full">Popunjenost parkinga</string>
    <string name="prices">Cene</string>
    <string name="parking_week">Radni dan:</string>
    <string name="parking_weekend">Vikend:</string>
    <string name="opened">Otvoren</string>
    <string name="from_to">Od - Do</string>
    <string name="pay_way">Mogućnost plaćanja</string>
    <string name="pay">Gotovina, platne kartice..</string>
    <string name="cash">Gotovina</string>
    <string name="cards">Platne kartice..</string>
    <string name="coupons">Kuponi</string>
    <string name="info">Dodatne informacije</string>
    <string name="reservation">Rezerviši mesto</string>
    <string name="price_per_hour">Cena po satu</string>
    <string name="working_time">Radno vreme</string>
    <string name="add_parking">Dodaj parking</string>

    <string name="dropOffDate">Početak rezervacije</string>
    <string name="dropOffTime">Kraj rezervacije</string>
    <string name="confirm_reservation">Potvrdi rezervaciju</string>

    <string name="home">Home</string>
    <string name="places">Mesta</string>
    <string name="preferences">Podešavanja</string>
    <string name="about">O aplikaciji</string>
    <string name="sync_data">Rezervacije</string>


    <string name="home_long">Mapa</string>
    <string name="groups_long">Grupe</string>
    <string name="places_long">Places to review</string>
    <string name="preferences_long">Promenite podešavanja</string>
    <string name="about_long">Saznajte više</string>
    <string name="sync_data_long">Lista mojih rezervacija</string>

    <string name="about_txt">ParkMe aplikacija omogućava korisnicima da na brz i jednostavan način pronađu i/ili rezervišu
    slobodno parking mesto na željenoj lokaciji u gradu. \n Takođe, aplikacija podržava i obaveštenja korisnicima o
    isteku parkinga, kao i lokaciju najbližeg parkinga u odnosu na trenutnu lokaciju i najpovoljnije cene parkinga. \n \n
        Razvojni tim: \n \n
        Milana Dapra       <b>(milana.dapra@gmail.com)</b> \n
        Marko Ivetić       <b>(markoIvetic93@gmail.com)</b> \n
        Boško Šogura       <b>(bolesogura93@gmail.com)</b> \n
    </string>

    <string name="pref_sync_title">Dozvoli sinhronizaciju</string>
    <string name="pref_sync_summ">Dozvoli aplikaciji da sinhronizuje automatski, kada je wifi dostupan</string>
    <string name="pref_syncConnectionType">Interval sinhronizacije</string>
    <string name="pref_radiusConnectionType">Radius lookup</string>

    <string name="pref_sync_list">pref_sync_list</string>
    <string name="pref_radius">pref_radius</string>
    <string name="pref_sync">pref_sync</string>

    <string name="pref_notification">pref_notification</string>
    <string name="pref_notType">Obaveštenje o isteku rezervacije na: </string>
    <string name="pref_not_list">pref_not_list</string>

    <string name="notifications">Obaveštenja</string>
    <string name="notif_on_my_review">Parking</string>
    <string name="notif_on_my_comment">On my comments</string>
    <string name="notif_on_my_review_key">notif_on_my_review</string>
    <string name="notif_on_my_comment_key">notif_on_my_comment</string>
    <string name="notif_on_my_review_summ">Slanje obaveštenja o isteku parking mesta</string>
    <string name="notif_on_my_comment_summ">Send you notifications on reviews that you have ccommented after sync</string>

    <string name="notif_on_sync_key">notif_on_sync</string>
    <string name="notif_on_sync_summ">Slanje obaveštenja o sinhronizaciji</string>
    <string name="notif_on_sync_title">Sync obaveštenja</string>

    <string name="rating">Ocenite usluge parkinga</string>
    <string name="comment">Unesite komentar</string>

    <string name="turn_wifi_on">Turn wifi on</string>
    <string name="turn_notif_on">Stop notification</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
