<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="notif_settings"
        android:title="@string/notifications">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/notif_on_my_review_key"
            android:summary="@string/notif_on_my_review_summ"
            android:title="@string/notif_on_my_review" />

        <ListPreference
            android:defaultValue="5"
            android:dependency="@string/notif_on_my_review_key"
            android:dialogTitle="@string/pref_notType"
            android:entries="@array/pref_notification_entries"
            android:entryValues="@array/pref_notification_values"
            android:key="@string/pref_not_list"
            android:summary="%s"
            android:title="@string/pref_notType" />

    </PreferenceCategory>

</PreferenceScreen>