<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.parkingApp.parkme.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/app_image"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/appImage"
        android:src="@drawable/parking" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_image"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/appName"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/credentials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textAlignment="center"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textAlignment="center"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_below="@id/password"
            android:layout_centerInParent="true"
            android:layout_marginTop="16dp"
            android:background="@color/appName"
            android:text="@string/action_sign_in"
            android:textStyle="bold" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/sign_in_button"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp" />

        <TextView
            android:id="@+id/link_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_button"
            android:autoLink="web"
            android:gravity="center"
            android:text="@string/sign_up_link"
            android:textSize="16sp"
            android:textColor="@color/appName"
            android:textStyle="bold" />


    </RelativeLayout>

</RelativeLayout>
</ScrollView>
